Contact form added

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@material-tailwind/react": "^1.2.5",
     "@ramonak/react-progress-bar": "^5.0.3",
     "next": "latest",
